<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    
    <include
        layout="@layout/toolbar_simple"
    />
    
    <android.widget.ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.widget.LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_large"
            android:orientation="vertical">
            
            <android.widget.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_large_extra"
                android:text="@string/sing_in_with_your_account"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/text_size_headline_medium"
                android:textStyle="bold"
            />
            
            <com.mth.fastfood.widget.MyEditText
                android:id="@id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_large"
                app:iconLeft="@drawable/ic_email"
                app:imeOptions="actionNext"
                app:inputType="textEmailAddress"
                app:hint="@string/sing_in_email"
            />
            
            <com.mth.fastfood.widget.MyEditText
                android:id="@id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_large"
                app:iconLeft="@drawable/ic_lock"
                app:imeOptions="actionDone"
                app:inputType="textPassword"
                app:hint="@string/sing_in_password"
            />
            
            <com.google.android.material.button.MaterialButton
                android:id="@id/btn_sing_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_large"
                android:padding="@dimen/padding_large"
                android:text="@string/sing_in"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_label_medium"
                android:onClick="btnClick"
                app:cornerRadius="@dimen/corner_radius_medium"
            />
            
            <android.widget.TextView
                android:id="@id/link_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_large"
                android:gravity="center_horizontal"
                android:text="@string/forgot_the_password"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_body_medium"
                android:textStyle="normal"
            />
            
            <android.widget.TextView
                android:id="@id/link_sing_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/dont_have_an_account"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_body_medium"
                android:textStyle="normal"
            />
            
        </android.widget.LinearLayout>
    </android.widget.ScrollView>
    
</android.widget.LinearLayout>
